# weather-app

./: .gitignore  README.md  create_file.py  data.csv  main.py  pyproject.toml  weather.py
